--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.4.7",
     "jade": "*",
     "underscore": "~1.5.2",
-    "mongoose": "~3.8.4"
+    "mongoose": "~3.8.4",
+    "async": "~0.2.9"
   }
 }
