--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jade": "*",
     "underscore": "~1.5.2",
     "mongoose": "~3.8.4",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "moment": "^2.5.1"
   }
 }
